
name:                hsEverywhere
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jyri-Matti Lähteenmäki
maintainer:          jyri-matti@lahteenmaki.net
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    example/css/*.css,
    example/css/bg.png,
    example/todo/*.hs,
    example/todo/*.html,
    example/todo/run-in-node.js

executable haskell-everywhere
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       ghcjs-base,
                       text,
                       transformers,
                       time,
                       deepseq,
                       react-flux
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
  cpp-options: -DGHCJS_BROWSER

executable haskell-everywhere-ios
  main-is:             IOSMain.hs
  build-depends:       base >=4.8 && <4.9,
                       ghcjs-base,
                       text,
                       transformers,
                       time,
                       deepseq,
                       react-flux
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
  cpp-options: -DGHCJS_BROWSER


executable haskell-everywhere-node
   ghc-options: -Wall
   default-language: Haskell2010
   hs-source-dirs: src
   main-is: NodeMain.hs
   build-depends: base
                , react-flux
                , deepseq
                , text
