
name:                hsEverywhere
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jyri-Matti Lähteenmäki
maintainer:          jyri-matti@lahteenmaki.net
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    example/css/*.css,
    example/css/bg.png,
    example/todo/*.hs,
    example/todo/*.html,
    example/todo/run-in-node.js

executable hsEverywhere
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       ghcjs-base,
                       text,
                       transformers,
                       time,
                       deepseq,
                       react-flux,
                       aeson
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -W
  cpp-options: -DGHCJS_BROWSER

