
name:                hseverywhere
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jyri-Matti Lähteenmäki
maintainer:          jyri-matti@lahteenmaki.net
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    example/css/*.css,
    example/css/bg.png,
    example/todo/*.hs,
    example/todo/*.html,
    example/todo/run-in-node.js

executable hseverywhere
  main-is:             Main.hs
  build-depends:       base >=4.9 && <5.0,
                       text,
                       transformers,
                       time,
                       deepseq,
                       react-hs,
                       aeson,
                       containers,
                       http-common,
                       network-uri,
                       semigroups
  if impl(ghcjs)
      build-depends: ghcjs-base
  else
      build-depends: ghcjs-base-stub
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -W
  cpp-options: -DGHCJS_BROWSER

library
  build-depends:       base >=4.9 && <5.0,
                       text,
                       transformers,
                       time,
                       deepseq,
                       react-hs,
                       aeson,
                       containers,
                       http-common,
                       network-uri,
                       semigroups
  exposed-modules: React.Flux.Rn.APIs,
                    React.Flux.Rn.Components,
                    React.Flux.Rn.Events,
                    React.Flux.Rn.Types,
                    React.Flux.Rn.Views,
                    React.Flux.Rn.Components.ActivityIndicator,
                    React.Flux.Rn.Components.Button,
                    React.Flux.Rn.Components.DatePickerIOS,
                    React.Flux.Rn.Components.DrawerLayoutAndroid,
                    React.Flux.Rn.Components.FlatList,
                    React.Flux.Rn.Components.Image,
                    React.Flux.Rn.Components.KeyboardAvoidingView,
                    React.Flux.Rn.Components.ListView,
                    React.Flux.Rn.Components.MaskedViewIOS,
                    React.Flux.Rn.Components.Modal,
                    React.Flux.Rn.Components.NavigatorIOS,
                    React.Flux.Rn.Components.Picker,
                    React.Flux.Rn.Components.PickerIOS,
                    React.Flux.Rn.Components.ProgressBarAndroid,
                    React.Flux.Rn.Components.ProgressViewIOS,
                    React.Flux.Rn.Components.RefreshControl,
                    React.Flux.Rn.Components.SafeAreaView,
                    React.Flux.Rn.Components.ScrollView,
                    React.Flux.Rn.Components.SectionList,
                    React.Flux.Rn.Components.SegmentedControlIOS,
                    React.Flux.Rn.Components.Slider,
                    React.Flux.Rn.Components.SnapshotViewIOS,
                    React.Flux.Rn.Components.StatusBar,
                    React.Flux.Rn.Components.Switch,
                    React.Flux.Rn.Components.TabBarIOS,
                    React.Flux.Rn.Components.TabBarIOS_Item,
                    React.Flux.Rn.Components.Text
                    React.Flux.Rn.Components.TextInput,
                    React.Flux.Rn.Components.ToolbarAndroid,
                    React.Flux.Rn.Components.TouchableHighlight,
                    React.Flux.Rn.Components.TouchableNativeFeedback,
                    React.Flux.Rn.Components.TouchableOpacity,
                    React.Flux.Rn.Components.TouchableWithoutFeedback,
                    React.Flux.Rn.Components.View,
                    React.Flux.Rn.Components.ViewPagerAndroid,
                    React.Flux.Rn.Components.VirtualizedList,
                    React.Flux.Rn.Components.WebView,
                    React.Flux.Rn.Props.ScrollViewProps,
                    React.Flux.Rn.Props.TouchableWithoutFeedbackProps,
                    React.Flux.Rn.Props.ViewProps,
                    React.Flux.Rn.Props.VirtualizedListProps,
                    React.Flux.Rn.StyleProps.ImageStyleProps,
                    React.Flux.Rn.StyleProps.LayoutStyleProps,
                    React.Flux.Rn.StyleProps.ShadowStyleProps,
                    React.Flux.Rn.StyleProps.TextStyleProps,
                    React.Flux.Rn.StyleProps.TransformsStyleProps,
                    React.Flux.Rn.StyleProps.ViewStyleProps,
                    React.Flux.Rn.Styles.Image,
                    React.Flux.Rn.Styles.Picker,
                    React.Flux.Rn.Styles.TextInput,
                    React.Flux.Rn.Styles.Text,
                    React.Flux.Rn.Styles.View
  if impl(ghcjs)
      build-depends: ghcjs-base
  else
      build-depends: ghcjs-base-stub
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -W
  cpp-options: -DGHCJS_BROWSER

