
name:                hseverywhere
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jyri-Matti Lähteenmäki
maintainer:          jyri-matti@lahteenmaki.net
build-type:          Simple
cabal-version:       >=1.10

executable hseverywhere
  main-is:             Main.hs
  build-depends:       base >=4.9 && <5.0,
                       text,
                       transformers,
                       time,
                       deepseq,
                       react-hs,
                       react-native-hs,
                       aeson,
                       containers,
                       http-common,
                       network-uri,
                       semigroups

  if impl(ghcjs)
      build-depends: ghcjs-base
  else
      build-depends: ghcjs-base-stub
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -W
  cpp-options: -DGHCJS_BROWSER

